--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
                 cppFlags ""
             }
         }
+        multiDexEnabled true
+        dexOptions{
+            javaMaxHeapSize = "4g"
+        }
+
     }
     buildTypes {
         release {
@@ -36,5 +41,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:multidex:1.0.0'
+
     testCompile 'junit:junit:4.12'
 }
