--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.android.support:multidex:1.0.0'
 
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:25.3.1'
 }
